fix: slider z-index

--- a/src/components/slider/image-slider.css
+++ b/src/components/slider/image-slider.css
@@ -97,7 +97,7 @@
   clip: unset;
   text-decoration: none;
   color: black;
-  z-index: 100;
+  /* z-index: 100; */
 }
 
 @media not (prefers-reduced-motion) {
